feat: show featured shops on storefront home
